# cookiecutter-reckonsys

./: LICENSE  README.md
backend/: .gitignore  .isort.cfg  Dockerfile  pyproject.toml
backend/backend/: celery_app.py  graphql.py  settings.py  urls.py
backend/backend/contrib/: events.py  socket.py  tasks.py
backend/backend/contrib/management/commands/: frontend_export.py  seed_db.py  sio_server.py  tmp_script.py
backend/backend/core/: admin.py  auth_backend.py  choices.py  decorators.py  inputs.py  models.py  mutations.py  node.py  queries.py  sms.py  storage.py  tasks.py  types.py
backend/backend/core/migrations/: 0001_initial.py
backend/scripts/: export.sh  isort.sh
